Word break on header fixed

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body {
 
 h1 {
   font-size: 50px;
-  word-break: break-all;
   color: white;
   display: inline;
 } 
